# envoy-prost-tonic

./: Cargo.toml  Cargo.tpl.toml  Makefile  README.md  buf.gen.yaml
patches/: 001-fix-conflict.patch  002-fix-conflict-serde.patch  003-serde-self.patch  004-gzip.patch
src/: lib.rs
