[package]
name = "envoy-prost-tonic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["envoy", "grpc", "protobuf", "control-plane"]
repository = "https://github.com/gwik/envoy-prost-tonic"
authors = ["Antonin Amand <antonin.amand@gmail.com>"]

description = "Envoy's protobuf messages and services for rust and tonic"


[dependencies]
bytes = "1"
prost = "0.11"
pbjson = "0.5"
pbjson-types = "0.5"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.8", features = ["gzip"] }
